recursion.lessons.recursion.koch.Koch.scala.error
Koch:17: error: ')' expected but integer literal found.
      	snowFlake(levels-1length/3)
                                 ^